Updates to format.

--- a/people.html
+++ b/people.html
@@ -23,6 +23,11 @@
         .container-narrow > hr {
             margin: 30px 0;
         }
+
+        legend.extra-padding {
+            margin: 30px 0;
+        }
+
     </style>
     <link href="assets/css/bootstrap-responsive.css" rel="stylesheet">
 
@@ -54,9 +59,10 @@
 
 <hr>
 
+
 <div class="row">
     <div class="span8">
-        <img width="100" height="150" src="assets/img/researchers/johnea/John_Allison.jpg">
+        <img width="100" height="150" src="assets/img/people/johnea/John_Allison.jpg">
         <h5>Dr. John Allison - Center Director</h5>
         <ul style="list-style-type: none;">
             <li>Email: <a href="mailto:johnea@umich.edu">johnea@umich.edu</a></li>
@@ -79,11 +85,11 @@
     </div>
 </div>
 
-<legend>Computational Group</legend>
+<legend class="extra-padding">Computational Group</legend>
 
 <div class="row">
     <div class="span8">
-        <img width="100" height="150" src="assets/img/researchers/krishna/krishna2.jpg">
+        <img width="100" height="150" src="assets/img/people/krishna/krishna2.jpg">
         <h5>Dr. Krishna Garikipati - Computational Group Lead</h5>
         <ul style="list-style-type: none;">
             <li>Email: <a href="mailto:krishna@umich.edu">krishna@umich.edu</a></li>
@@ -107,7 +113,7 @@
 
 <div class="row">
     <div class="span8">
-        <img width="100" height="150" src="assets/img/researchers/vikramg/vikramg.jpg">
+        <img width="100" height="150" src="assets/img/people/vikramg/vikramg.jpg">
         <h5>Dr. Vikram Gavini</h5>
         <ul style="list-style-type: none;">
             <li>Email: <a href="mailto:vikramg@umich.edu">vikramg@umich.edu</a></li>
@@ -126,7 +132,7 @@
 
 <div class="row">
     <div class="span8">
-        <img width="100" height="150" src="assets/img/researchers/kthorn/Katsuyo_Thornton.jpg">
+        <img width="100" height="150" src="assets/img/people/kthorn/Katsuyo_Thornton.jpg">
         <h5>Dr. Katsuyo Thornton</h5>
         <ul style="list-style-type: none;">
             <li>Email: <a href="mailto:kthorn@umich.edu">kthorn@umich.edu</a></li>
@@ -151,7 +157,7 @@
 
 <div class="row">
     <div class="span8">
-        <img width="100" height="150" src="assets/img/researchers/avdv/Anton_Van%20der%20Ven.jpg">
+        <img width="100" height="150" src="assets/img/people/avdv/Anton_Van%20der%20Ven.jpg">
         <h5>Dr. Anton Van der Ven</h5>
         <ul style="list-style-type: none;">
             <li>Email: <a href="mailto:avdv@umich.edu">avdv@umich.edu</a></li>
@@ -173,7 +179,7 @@
 
 <div class="row">
     <div class="span8">
-        <img width="100" height="150" src="assets/img/researchers/veeras/veera2.jpg">
+        <img width="100" height="150" src="assets/img/people/veeras/veera2.jpg">
         <h5>Dr. Veera Sundararaghavan</h5>
         <ul style="list-style-type: none;">
             <li>Email: <a href="mailto:veeras@umich.edu">veeras@umich.edu</a></li>
@@ -200,7 +206,7 @@
 
 <div class="row">
     <div class="span8">
-        <img width="100" height="150" src="assets/img/researchers/rudraa/rudraa.jpg">
+        <img width="100" height="150" src="assets/img/people/rudraa/rudraa.jpg">
         <h5>Dr. Siva Rudraraju</h5>
         <ul style="list-style-type: none;">
             <li>Email: <a href="mailto:rudraa@umich.edu">rudraa@umich.edu</a></li>
@@ -225,7 +231,7 @@
 
 <div class="row">
     <div class="span8">
-        <img width="100" height="150" src="assets/img/researchers/bpuchala/210px-People-brian.jpg">
+        <img width="100" height="150" src="assets/img/people/bpuchala/210px-People-brian.jpg">
         <h5>Dr. Brian Puchala</h5>
         <ul style="list-style-type: none;">
             <li>Email: <a href="mailto:bpuchala@umich.edu">bpuchala@umich.edu</a></li>
@@ -243,7 +249,7 @@
 
 <div class="row">
     <div class="span8">
-        <!-- <img width="100" height="150" src="assets/img/researchers/"> -->
+        <!-- <img width="100" height="150" src="assets/img/people/"> -->
         Need photo of Larry
         <h5>Dr. Larry Aagesen</h5>
         <ul style="list-style-type: none;">
@@ -258,12 +264,16 @@
     </div>
 </div>
 
-<legend>Experimentalists Group</legend>
+<legend class="extra-padding">Experimentalist Group</legend>
 
 <div class="row">
-    <div class="span4">
-        <img width="100" height="150" src="assets/img/researchers/jonesjwa/J.%20Wayne_Jones.jpg">
+    <div class="span8">
+        <img width="100" height="150" src="assets/img/people/jonesjwa/J.%20Wayne_Jones.jpg">
         <h5> Dr. Wayne Jones</h5>
+        <ul style="list-style-type: none;">
+            <li>Email: <a href="mailto:jonesjwa@umich.edu">jonesjwa@umich.edu</a></li>
+            <li>Research: <a href="http://www.mse.engin.umich.edu/people/faculty/jones">http://www.mse.engin.umich.edu/people/faculty/jones</a></li>
+        </ul>
     </div>
     <div class="span8">
         <p>
@@ -284,9 +294,13 @@
 <hr>
 
 <div class="row">
-    <div class="span4">
-        <img width="100" height="150" src="assets/img/researchers/emarq/Emmanuelle_Marquis.jpg">
+    <div class="span8">
+        <img width="100" height="150" src="assets/img/people/emarq/Emmanuelle_Marquis.jpg">
         <h5>Dr. Emmanuelle Marquis</h5>
+        <ul style="list-style-type: none;">
+            <li>Email: <a href="mailto:emarq@umich.edu">emarq@umich.edu</a></li>
+            <li>Research: <a href="http://www-personal.umich.edu/~emarq/">http://www-personal.umich.edu/~emarq/</a></li>
+        </ul>
     </div>
     <div class="span8">
         <p>
@@ -306,9 +320,13 @@
 <hr>
 
 <div class="row">
-    <div class="span4">
-        <img width="100" height="150" src="assets/img/researchers/samdaly/Samantha_Daly.jpg">
+    <div class="span8">
+        <img width="100" height="150" src="assets/img/people/samdaly/Samantha_Daly.jpg">
         <h5>Dr. Samantha Daly</h5>
+        <ul style="list-style-type: none;">
+            <li>Email: <a href="mailto:samdaly@umich.edu">samdaly@umich.edu</a></li>
+            <li>Research: <a href="http://dalylabs.engin.umich.edu/Group.html">http://dalylabs.engin.umich.edu/Group.html</a></li>
+        </ul>
     </div>
     <div class="span8">
         <p>
@@ -324,26 +342,16 @@
     </div>
 </div>
 
-<hr>
+<legend class="extra-padding">Repository Group</legend>
 
 <div class="row">
-    <div class="span4">
-        <img width="100" height="150" src="assets/img/researchers/hedstrom/hedstrom_margaret_pp_1.jpg">
-        <h5>Dr. Margaret Hedstrom</h5>
-    </div>
     <div class="span8">
-        <p>
-            Something here
-        </p>
-    </div>
-</div>
-
-<hr>
-
-<div class="row">
-    <div class="span4">
-        <img width="100" height="150" src="assets/img/researchers/jag/Jag-web.jpg">
+        <img width="100" height="150" src="assets/img/people/jag/Jag-web.jpg">
         <h5>Dr. H.V. Jagadish</h5>
+        <ul style="list-style-type: none;">
+            <li>Email: <a href="mailto:jag@umich.edu">jag@umich.edu</a></li>
+            <li>Research: <a href="http://web.eecs.umich.edu/~jag/">http://web.eecs.umich.edu/~jag/</a></li>
+        </ul>
     </div>
     <div class="span8">
         <p>
@@ -361,6 +369,40 @@
 
 <hr>
 
+<div class="row">
+    <div class="span8">
+        <img width="100" height="150" src="assets/img/people/hedstrom/hedstrom_margaret_pp_1.jpg">
+        <h5>Dr. Margaret Hedstrom</h5>
+        <ul style="list-style-type: none;">
+            <li>Email: <a href="mailto:hedstrom@umich.edu">hedstrom@umich.edu</a></li>
+            <li>Research: <a href="#">Something here</a></li>
+        </ul>
+    </div>
+    <div class="span8">
+        <p>
+            Something here
+        </p>
+    </div>
+</div>
+
+<hr>
+
+<div class="row">
+    <div class="span8">
+        <img width="100" height="150" src="assets/img/people/gtarcea/Tarcea_image.jpg">
+        <h5>V. Glenn Tarcea - Senior Developer</h5>
+        <ul style="list-style-type: none;">
+            <li>Email: <a href="mailto:gtarcea@umich.edu">gtarcea@umich.edu</a></li>
+        </ul>
+    </div>
+    <div class="span8">
+        <p>
+            Glenn has been involved with computers since 1988 when he discovered Turbo Pascal. He has worked on projects ranging
+            from student account systems to distributed storage and backup systems. In 2009 Glenn completed
+            his MBA at the University of Michigan's Ross School of Business.
+        </p>
+    </div>
+</div>
 
 
 </div>
