--- a/people.html
+++ b/people.html
@@ -207,7 +207,7 @@
 <div class="row">
     <div class="span8">
         <img width="100" height="150" src="assets/img/people/rudraa/rudraa.jpg">
-        <h5>Dr. Siva Rudraraju</h5>
+        <h5>Dr. Shiva Rudraraju</h5>
         <ul style="list-style-type: none;">
             <li>Email: <a href="mailto:rudraa@umich.edu">rudraa@umich.edu</a></li>
             <li>Research: <a href="http://www-personal.umich.edu/~rudraa/">http://www-personal.umich.edu/~rudraa/</a></li>
@@ -231,7 +231,7 @@
 
 <div class="row">
     <div class="span8">
-        <img width="100" height="150" src="assets/img/people/bpuchala/210px-People-brian.jpg">
+        <img width="100" height="150" src="assets/img/people/bpuchala/brian.jpg">
         <h5>Dr. Brian Puchala</h5>
         <ul style="list-style-type: none;">
             <li>Email: <a href="mailto:bpuchala@umich.edu">bpuchala@umich.edu</a></li>
