--- a/contacts.html
+++ b/contacts.html
@@ -46,16 +46,22 @@
 
     <div class="masthead">
         <ul class="nav nav-pills pull-right">
-            <li class=""><a href="prisms.html">Home</a></li>
+            <li><a href="prisms.html">Home</a></li>
             <li><a href="publications.html">Publications</a></li>
-            <li><a href="#">About</a></li>
+            <li><a href="about.html">About</a></li>
             <li><a href="people.html">People</a></li>
-            <li><a href="#">Contact</a></li>
+            <li class="active"><a href="#">Contact</a></li>
         </ul>
         <h3 class="muted">PRISMS Center</h3>
     </div>
 
     <hr>
+
+    <div class="row">
+        <div class="span12">
+            <h4>General center contact information here.</h4>
+        </div>
+    </div>
 
 </div>
 <!-- /container -->
