--- a/prisms.html
+++ b/prisms.html
@@ -73,9 +73,9 @@
         <ul class="nav nav-pills pull-right">
             <li class="active"><a href="#">Home</a></li>
             <li><a href="publications.html">Publications</a></li>
-            <li><a href="#">About</a></li>
+            <li><a href="about.html">About</a></li>
             <li><a href="people.html">People</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="contacts.html">Contact</a></li>
         </ul>
         <h3 class="muted">PRISMS Center</h3>
     </div>
