--- a/publications.html
+++ b/publications.html
@@ -48,9 +48,9 @@
         <ul class="nav nav-pills pull-right">
             <li><a href="prisms.html">Home</a></li>
             <li class="active"><a href="publications.html">Publications</a></li>
-            <li><a href="#">About</a></li>
+            <li><a href="about.html">About</a></li>
             <li><a href="people.html">People</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="contacts.html">Contact</a></li>
         </ul>
         <h3 class="muted">PRISMS Center</h3>
     </div>
