--- a/people.html
+++ b/people.html
@@ -94,7 +94,8 @@
         <h5>Dr. Krishna Garikipati - Computational Group Lead</h5>
         <ul style="list-style-type: none;">
             <li>Email: <a href="mailto:krishna@umich.edu">krishna@umich.edu</a></li>
-            <li>Research: <a href="http://comp-phys.engin.umich.edu/Main_Page">http://comp-phys.engin.umich.edu/Main_Page</a></li>
+            <li>Research: <a href="http://comp-phys.engin.umich.edu/Main_Page">http://comp-phys.engin.umich.edu/Main_Page</a>
+            </li>
         </ul>
     </div>
     <div class="span8">
@@ -118,7 +119,8 @@
         <h5>Dr. Vikram Gavini</h5>
         <ul style="list-style-type: none;">
             <li>Email: <a href="mailto:vikramg@umich.edu">vikramg@umich.edu</a></li>
-            <li>Research: <a href="http://www-personal.umich.edu/~vikramg/index.html">http://www-personal.umich.edu/~vikramg/index.html</a></li>
+            <li>Research: <a href="http://www-personal.umich.edu/~vikramg/index.html">http://www-personal.umich.edu/~vikramg/index.html</a>
+            </li>
         </ul>
     </div>
     <div class="span8">
@@ -137,7 +139,8 @@
         <h5>Dr. Katsuyo Thornton</h5>
         <ul style="list-style-type: none;">
             <li>Email: <a href="mailto:kthorn@umich.edu">kthorn@umich.edu</a></li>
-            <li>Research: <a href="http://www.mse.engin.umich.edu/people/faculty/thornton">http://www.mse.engin.umich.edu/people/faculty/thornton</a></li>
+            <li>Research: <a href="http://www.mse.engin.umich.edu/people/faculty/thornton">http://www.mse.engin.umich.edu/people/faculty/thornton</a>
+            </li>
         </ul>
     </div>
     <div class="span8">
@@ -162,7 +165,8 @@
         <h5>Dr. Anton Van der Ven</h5>
         <ul style="list-style-type: none;">
             <li>Email: <a href="mailto:avdv@umich.edu">avdv@umich.edu</a></li>
-            <li>Research: <a href="http://www.mse.engin.umich.edu/people/faculty/vanderven">http://www.mse.engin.umich.edu/people/faculty/vanderven</a></li>
+            <li>Research: <a href="http://www.mse.engin.umich.edu/people/faculty/vanderven">http://www.mse.engin.umich.edu/people/faculty/vanderven</a>
+            </li>
         </ul>
     </div>
     <div class="span8">
@@ -184,7 +188,8 @@
         <h5>Dr. Veera Sundararaghavan</h5>
         <ul style="list-style-type: none;">
             <li>Email: <a href="mailto:veeras@umich.edu">veeras@umich.edu</a></li>
-            <li>Research: <a href="http://www-personal.umich.edu/~veeras/">http://www-personal.umich.edu/~veeras/</a></li>
+            <li>Research: <a href="http://www-personal.umich.edu/~veeras/">http://www-personal.umich.edu/~veeras/</a>
+            </li>
         </ul>
     </div>
     <div class="span8">
@@ -211,7 +216,8 @@
         <h5>Dr. Shiva Rudraraju</h5>
         <ul style="list-style-type: none;">
             <li>Email: <a href="mailto:rudraa@umich.edu">rudraa@umich.edu</a></li>
-            <li>Research: <a href="http://www-personal.umich.edu/~rudraa/">http://www-personal.umich.edu/~rudraa/</a></li>
+            <li>Research: <a href="http://www-personal.umich.edu/~rudraa/">http://www-personal.umich.edu/~rudraa/</a>
+            </li>
         </ul>
     </div>
     <div class="span8">
@@ -251,7 +257,9 @@
 <div class="row">
     <div class="span8">
         <!-- <img width="100" height="150" src="assets/img/people/"> -->
-        Need photo of Larry
+        <DIV style="font-weight: bold; font-size: 12pt; background: #cccccc; text-transform: uppercase; width: 130px; color: #ffffff;
+               line-height: 160px; height: 160px; text-align: center">No Photo
+        </DIV>
         <h5>Dr. Larry Aagesen</h5>
         <ul style="list-style-type: none;">
             <li>Email: <a href="mailto:laagesen@umich.edu">laagesen@umich.edu</a></li>
@@ -260,7 +268,17 @@
     </div>
     <div class="span8">
         <p>
-            Something here
+            My research interests are in the use of theoretical and computational techniques to study the evolution of
+            microstructures
+            and nanostructures during crystal growth, phase transformations, coarsening, and how this evolution affects
+            material
+            properties in metals and semiconductors. Past work has employed phase-field modeling to predict
+            microstructural evolution
+            and comparing simulation predictions to 3D experimental data, in both Al-Cu alloys for structural
+            applications and GaN
+            quantum dots for applications in high-efficiency solar cells. I am also interested in characterizing complex
+            microstructures
+            in three dimensions, in systems such as Ni superalloys and laser-welded stainless steels.
         </p>
     </div>
 </div>
@@ -273,7 +291,8 @@
         <h5> Dr. Wayne Jones</h5>
         <ul style="list-style-type: none;">
             <li>Email: <a href="mailto:jonesjwa@umich.edu">jonesjwa@umich.edu</a></li>
-            <li>Research: <a href="http://www.mse.engin.umich.edu/people/faculty/jones">http://www.mse.engin.umich.edu/people/faculty/jones</a></li>
+            <li>Research: <a href="http://www.mse.engin.umich.edu/people/faculty/jones">http://www.mse.engin.umich.edu/people/faculty/jones</a>
+            </li>
         </ul>
     </div>
     <div class="span8">
@@ -326,7 +345,8 @@
         <h5>Dr. Samantha Daly</h5>
         <ul style="list-style-type: none;">
             <li>Email: <a href="mailto:samdaly@umich.edu">samdaly@umich.edu</a></li>
-            <li>Research: <a href="http://dalylabs.engin.umich.edu/Group.html">http://dalylabs.engin.umich.edu/Group.html</a></li>
+            <li>Research: <a href="http://dalylabs.engin.umich.edu/Group.html">http://dalylabs.engin.umich.edu/Group.html</a>
+            </li>
         </ul>
     </div>
     <div class="span8">
@@ -398,7 +418,8 @@
     </div>
     <div class="span8">
         <p>
-            Glenn has been involved with computers since 1988 when he discovered Turbo Pascal. He has worked on projects ranging
+            Glenn has been involved with computers since 1988 when he discovered Turbo Pascal. He has worked on projects
+            ranging
             from student account systems to distributed storage and backup systems. In 2009 Glenn completed
             his MBA at the University of Michigan's Ross School of Business.
         </p>
