--- a/people.html
+++ b/people.html
@@ -100,13 +100,12 @@
     </div>
     <div class="span8">
         <p>
-            Prof. Garikipati's work draws from nonlinear mechanics, materials physics,
-            applied mathematics and numerical methods. He is particularly interested in
-            problems of mathematical biology, biophysics and the mechanics of biology.
-            Current research interests include: (1) growth and remodeling or biological tissue, cell adhesion
-            and cell mechanics (2) stress-defect interactions and transport in semiconductor/microelectronic
-            materials, and (3) multiscale aspects of material behavior with an emphasis on plasticity
-            at small scales.
+            Broadly, my research interests are in developing mathematical and computational models of physical systems.
+            With relevance to the PRISMS Center this consists of continuum scale models of coupled mechano-chemical
+            phenomena in materials physics. Typically, the problems that I have worked on have been nonlinear, such as
+            finite strain elasto-plasticity and damage, and mass transport. Of special interest to me are the physics
+            described by high-order pdes such as strain gradient theories and the Cahn-Hilliard equation, and the
+            numerical methods needed for computations with these models.
         </p>
     </div>
 </div>
