--- a/people.html
+++ b/people.html
@@ -8,29 +8,8 @@
     <meta name="author" content="">
     <title></title>
     <link href="assets/css/bootstrap.css" rel="stylesheet">
-    <style>
-        body {
-            padding-top: 20px;
-            padding-bottom: 40px;
-        }
-
-            /* Custom container */
-        .container-narrow {
-            margin: 0 auto;
-            max-width: 700px;
-        }
-
-        .container-narrow > hr {
-            margin: 30px 0;
-        }
-
-        legend.extra-padding {
-            margin: 30px 0;
-        }
-
-    </style>
     <link href="assets/css/bootstrap-responsive.css" rel="stylesheet">
-
+    <link rel="stylesheet" href="assets/css/style.css" rel="stylesheet">
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -55,7 +34,7 @@
         <li class="active"><a href="people.html">People</a></li>
         <li><a href="contacts.html">Contact</a></li>
     </ul>
-    <h3 class="muted">PRISMS Center</h3>
+    <h3>PRISMS Center</h3>
 </div>
 
 <hr>
