--- a/prisms.html
+++ b/prisms.html
@@ -9,48 +9,8 @@
 
     <!-- Le styles -->
     <link href="assets/css/bootstrap.css" rel="stylesheet">
-    <style type="text/css">
-        body {
-            padding-top: 20px;
-            padding-bottom: 40px;
-        }
-
-            /* Custom container */
-        .container-narrow {
-            margin: 0 auto;
-            max-width: 700px;
-        }
-
-        .container-narrow > hr {
-            margin: 30px 0;
-        }
-
-            /* Main marketing message and sign up button */
-        .jumbotron {
-            margin: 60px 0;
-            text-align: center;
-        }
-
-        .jumbotron h1 {
-            font-size: 72px;
-            line-height: 1;
-        }
-
-        .jumbotron .btn {
-            font-size: 21px;
-            padding: 14px 24px;
-        }
-
-            /* Supporting marketing content */
-        .marketing {
-            margin: 60px 0;
-        }
-
-        .marketing p + h4 {
-            margin-top: 28px;
-        }
-    </style>
     <link href="assets/css/bootstrap-responsive.css" rel="stylesheet">
+    <link rel="stylesheet" href="assets/css/style.css" rel="stylesheet">
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
@@ -77,7 +37,7 @@
             <li><a href="people.html">People</a></li>
             <li><a href="contacts.html">Contact</a></li>
         </ul>
-        <h3 class="muted">PRISMS Center</h3>
+        <h3>PRISMS Center</h3>
     </div>
 
     <hr>
