--- a/publications.html
+++ b/publications.html
@@ -9,24 +9,8 @@
 
     <!-- Le styles -->
     <link href="assets/css/bootstrap.css" rel="stylesheet">
-    <style>
-        body {
-            padding-top: 20px;
-            padding-bottom: 40px;
-        }
-
-            /* Custom container */
-        .container-narrow {
-            margin: 0 auto;
-            max-width: 700px;
-        }
-
-        .container-narrow > hr {
-            margin: 30px 0;
-        }
-    </style>
     <link href="assets/css/bootstrap-responsive.css" rel="stylesheet">
-
+    <link rel="stylesheet" href="assets/css/style.css" rel="stylesheet">
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -52,7 +36,7 @@
             <li><a href="people.html">People</a></li>
             <li><a href="contacts.html">Contact</a></li>
         </ul>
-        <h3 class="muted">PRISMS Center</h3>
+        <h3>PRISMS Center</h3>
     </div>
 
     <hr>
