Change color to blue.

--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
 
     <hr>
 
-    <div class="row">
+    <div class="row-fluid marketing">
         <div class="span12">
             <h4>About the center here</h4>
         </div>
