--- a/contacts.html
+++ b/contacts.html
@@ -42,11 +42,15 @@
 
     <hr>
 
-    <div class="row">
+    <div class="row-fluid marketing">
         <div class="span12">
             <h4>General center contact information here.</h4>
         </div>
     </div>
+
+    <footer>
+        <p>Footer stuff</p>
+    </footer>
 
 </div>
 <!-- /container -->
