--- a/people.html
+++ b/people.html
@@ -40,7 +40,7 @@
 <hr>
 
 
-<div class="row">
+<div class="row-fluid marketing">
     <div class="span8">
         <img width="100" height="150" src="assets/img/people/johnea/John_Allison.jpg">
         <h5>Dr. John Allison - Center Director</h5>
