--- a/publications.html
+++ b/publications.html
@@ -41,7 +41,7 @@
 
     <hr>
 
-    <div class="row">
+    <div class="row-fluid marketing">
         <div class="span8 offset2">
             <h3>Please check back here often.</h3>
         </div>
