Update color scheme and general cleanup.

--- a/about.html
+++ b/about.html
@@ -40,9 +40,9 @@
         <h3>PRISMS Center</h3>
     </div>
 
-    <hr>
+    <hr class="nav-separator">
 
-    <div class="row">
+    <div class="row-fluid marketing">
         <div class="span12">
             <h4>About the center here</h4>
         </div>
