--- a/prisms.html
+++ b/prisms.html
@@ -40,7 +40,7 @@
         <h3>PRISMS Center</h3>
     </div>
 
-    <hr>
+    <hr class="nav-separator">
 
     <div class="jumbotron">
         <h3>Welcome</h3>
