--- a/publications.html
+++ b/publications.html
@@ -39,9 +39,9 @@
         <h3>PRISMS Center</h3>
     </div>
 
-    <hr>
+    <hr class="nav-separator">
 
-    <div class="row">
+    <div class="row-fluid marketing">
         <div class="span8 offset2">
             <h3>Please check back here often.</h3>
         </div>
