Add styling to center name. Add glyphys for news items.

--- a/prisms.html
+++ b/prisms.html
@@ -37,7 +37,7 @@
             <li><a href="people.html">People</a></li>
             <li><a href="contacts.html">Contact</a></li>
         </ul>
-        <h3>PRISMS Center</h3>
+        <h3 class="prisms-logo">PRISMS Center</h3>
     </div>
 
     <hr class="nav-separator">
@@ -76,10 +76,10 @@
 
     <div class="row-fluid marketing">
         <div class="span12">
-            <h4>News</h4>
-            <p>
-                Some news here
-            </p>
+            <h4><i class="icon-bullhorn space-icon5"></i>News</h4>
+            <ul style="list-style-type: none;">
+                <li><i class="icon-arrow-right space-icon5"></i>PRISMS Center Launches in October 2012</li>
+            </ul>
         </div>
     </div>
 
