--- a/architecture.html
+++ b/architecture.html
@@ -37,7 +37,7 @@
         <li><a href="people.html">People</a></li>
         <li><a href="contacts.html">Contact</a></li>
     </ul>
-    <h3>PRISMS Center</h3>
+    <h3 class="prisms-logo">PRISMS Center</h3>
 </div>
 
 <hr class="nav-separator">
