--- a/people.html
+++ b/people.html
@@ -34,7 +34,7 @@
         <li class="active"><a href="people.html">People</a></li>
         <li><a href="contacts.html">Contact</a></li>
     </ul>
-    <h3>PRISMS Center</h3>
+    <h3 class="prisms-logo">PRISMS Center</h3>
 </div>
 
 <hr class="nav-separator">
