Initial switch to AngularJS

--- a/template.html
+++ b/template.html
@@ -46,7 +46,7 @@
 
     <div class="masthead">
         <ul class="nav nav-pills pull-right">
-            <li class=""><a href="prisms.html">Home</a></li>
+            <li class=""><a href="index.html">Home</a></li>
             <li><a href="publications.html">Publications</a></li>
             <li><a href="#">About</a></li>
             <li><a href="people.html">People</a></li>
