--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
 
     <div class="masthead">
         <ul class="nav nav-pills pull-right">
-            <li><a href="prisms.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="publications.html">Publications</a></li>
             <li class="active"><a href="#">About</a></li>
             <li><a href="people.html">People</a></li>
