--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="prisms">
 <head>
     <meta charset="utf-8">
     <title>PRISMS Home</title>
@@ -32,6 +32,7 @@
     <div class="masthead">
         <ul class="nav nav-pills pull-right">
             <li class="active"><a href="#">Home</a></li>
+            <li><a href="architecture.html">Architecture</a></li>
             <li><a href="publications.html">Publications</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="people.html">People</a></li>
@@ -97,6 +98,6 @@
 <!-- Placed at the end of the document so the pages load faster -->
 <script src="assets/js/jquery.js"></script>
 <script src="assets/js/bootstrap.js"></script>
-
+<script src="assets/js/angular.min.js"></script>
 </body>
 </html>
