--- a/people.html
+++ b/people.html
@@ -28,7 +28,7 @@
 
 <div class="masthead">
     <ul class="nav nav-pills pull-right">
-        <li><a href="prisms.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="publications.html">Publications</a></li>
         <li><a href="about.html">About</a></li>
         <li class="active"><a href="people.html">People</a></li>
