--- a/publications.html
+++ b/publications.html
@@ -30,7 +30,7 @@
 
     <div class="masthead">
         <ul class="nav nav-pills pull-right">
-            <li><a href="prisms.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li class="active"><a href="publications.html">Publications</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="people.html">People</a></li>
