Add more of John's functionality.

--- a/index.html
+++ b/index.html
@@ -44,8 +44,13 @@
 
     <div ng-view></div>
 
-    <div class="footer">
-        <p>&copy; Company 2012</p>
+    <hr>
+
+    <div class="footer box">
+        <p style="margin-bottom:0px">PRISMS Center</p>
+        <p style="font-size:80%; line-height: 10px">(PR)edictive (I)ntegrated (S)tructural (M)aterials (S)cience</p>
+        <p>DOE Grant# ABC123</p>
+        <p><a style="font-size:75%" href="http://www.umich.edu">&copy; The University of Michigan</a></p>
     </div>
 </div>
 <!-- /container -->
