--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <div class="footer box">
         <p style="margin-bottom:0px">PRISMS Center</p>
         <p style="font-size:80%; line-height: 10px">(PR)edictive (I)ntegrated (S)tructural (M)aterials (S)cience</p>
-        <p>DOE</p>
+        <!--<p>DOE</p>-->
         <p><a style="font-size:75%" href="http://www.umich.edu">&copy; The University of Michigan</a></p>
     </div>
 </div>
