--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="masthead">
         <ul id="prisms-tabs" class="nav nav-pills pull-right">
             <li id="home" class="active"><a href="#/prisms">Home</a></li>
-            <li id="architecture"><a href="#/prisms/architecture">Architecture</a></li>
+            <li id="architecture"><a href="architecture.html">Architecture</a></li>
             <li id="materialscommons"><a href="#/prisms/materialscommons">Materials Commons</a></li>
             <li id="people"><a href="#/prisms/people">People</a></li>
             <li id="publications"><a href="#/prisms/publications">Publications</a></li>
