Add initial writeup for Larry.

--- a/architecture.html
+++ b/architecture.html
@@ -135,18 +135,26 @@
     </div>
     <div class="modal-body">
         <p>
-            Input:
-            \[ E^\mathrm{gb} \]
-            \[ E(x,F,S),\;\Gamma \]
+            <b>Input:</b> Free energies, Diffusion coefficients
+            <!--\[ E^\mathrm{gb} \]-->
+            <!--\[ E(x,F,S),\;\Gamma \]-->
         </p>
 
         <p>
-            Equation:
-            \[ \frac{\partial c(x)}{\partial t} = \nabla\cdot\left(\Gamma\left(c(x)\right)\nabla\mu\right) \]
+            The phase-field method is a technique for simulating microstructural evolution. An order parameter describes
+            what phase the system is in at each point of the simulation domain. The order parameter is evolved by the
+            Allen-Cahn equation for non-conserved order parameters and the Cahn-Hilliard equation for conserved order parameters.
         </p>
 
         <p>
-            Output: \[ Nano-/micro-structure, \\Mean \space field \space dynamics \]
+            <!--Equation:-->
+            <!--\[ \frac{\partial c(x)}{\partial t} = \nabla\cdot\left(\Gamma\left(c(x)\right)\nabla\mu\right) \]-->
+        </p>
+
+        <p>
+
+            <b>Output:</b> Precipitate microstructure
+            <!--\[ Nano-/micro-structure, \\Mean \space field \space dynamics \]-->
         </p>
     </div>
     <div class="modal-footer">
